--- a/StreamRecorder/StreamRecorder.csproj
+++ b/StreamRecorder/StreamRecorder.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NAudio" Version="2.0.1" />
+    <PackageReference Include="NAudio.Core" Version="2.0.0" />
+    <PackageReference Include="NAudio.WinMM" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
