fixed buffer problems on playback by increasing timer interval to 5 sec

--- a/StreamRecorder/appsettings.json
+++ b/StreamRecorder/appsettings.json
@@ -1,13 +1,34 @@
 ﻿{
-    "AppConfig": {
-        "Playlist": "KTCKAM.pls",
-        "RecordOn":"true",
-        "SaveFolder": "D:\\temp\\",
-        "Schedule": [
-            ["The Musers","5:30","10:00"],
-            ["Norm and D","10:00","12:00"],
-            ["The Hang Zone","12:00","15:00"],
-            ["The Hardline","15:00","19:00"]
-        ]
-    }
+   "AppConfig":{
+      "Playlist":"KTCKAM.pls",
+      "RecordOn":"true",
+      "SaveFolder":"D:\\temp\\",
+      "Schedule":[
+         {
+            "Title":"The Musers",
+            "StartTime":"5:30",
+            "EndTime":"10:00"
+         },
+         {
+            "Title":"Norm and D",
+            "StartTime":"10:00",
+            "EndTime":"12:00"
+         },
+         {
+            "Title":"The Hang Zone",
+            "StartTime":"12:00",
+            "EndTime":"15:00"
+         },
+         {
+            "Title":"The Hardline",
+            "StartTime":"15:00",
+            "EndTime":"19:00"
+         },
+         {
+            "Title":"The Ticket Top 10",
+            "StartTime":"19:00",
+            "EndTime":"21:00"
+         }
+      ]
+   }
 }
