moved to a hosted console design.  implemented recording save properly on CTRL+C exit.

--- a/StreamRecorder/appsettings.json
+++ b/StreamRecorder/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            // Avoid logging lifetime events
+            "Microsoft.Hosting.Lifetime": "Warning"
+        }
+    },
    "AppConfig":{
       "Playlist":"KTCKAM.pls",
       "RecordOn":"true",
