--- a/StreamRecorder/appsettings.json
+++ b/StreamRecorder/appsettings.json
@@ -7,7 +7,20 @@
         }
     },
    "AppConfig":{
-      "Playlist":"KTCKAM.pls",
+      "Playlist":[
+        "http://24863.live.streamtheworld.com:80/KTCKAM_SC",
+        "http://24863.live.streamtheworld.com:3690/KTCKAM_SC",
+        "http://25103.live.streamtheworld.com:80/KTCKAM_SC",
+        "http://25103.live.streamtheworld.com:3690/KTCKAM_SC",
+        "http://24083.live.streamtheworld.com:80/KTCKAM_SC",
+        "http://24083.live.streamtheworld.com:3690/KTCKAM_SC",
+        "http://14003.live.streamtheworld.com:80/KTCKAM_SC",
+        "http://14003.live.streamtheworld.com:3690/KTCKAM_SC",
+        "http://18493.live.streamtheworld.com:80/KTCKAM_SC",
+        "http://18493.live.streamtheworld.com:3690/KTCKAM_SC",
+        "http://18723.live.streamtheworld.com:80/KTCKAM_SC",
+        "http://18723.live.streamtheworld.com:3690/KTCKAM_SC"
+      ],
       "RecordOn":"true",
       "SaveFolder":"D:\\temp\\",
       "Schedule":[
