reorganized project a bit.  redo timer code to fix an issue when rolling over to the next day.  added a restart feature if the stream recorder encounters an exception.

--- a/StreamRecorder/appsettings.json
+++ b/StreamRecorder/appsettings.json
@@ -22,29 +22,36 @@
         "http://18723.live.streamtheworld.com:3690/KTCKAM_SC"
       ],
       "RecordOn":"true",
-      "SaveFolder":"D:\\temp\\",
+      "SaveFolder":"D:\\Radio\\KTCK-AM\\",
+      "DaysToKeep":7,
+      "RestartOnException":"true",
       "Schedule":[
          {
+            "Id":1,
             "Title":"The Musers",
             "StartTime":"5:30",
             "EndTime":"10:00"
          },
          {
+            "Id":2,
             "Title":"Norm and D",
             "StartTime":"10:00",
             "EndTime":"12:00"
          },
          {
+            "Id":3,
             "Title":"The Hang Zone",
             "StartTime":"12:00",
             "EndTime":"15:00"
          },
          {
+            "Id":4,
             "Title":"The Hardline",
             "StartTime":"15:00",
             "EndTime":"19:00"
          },
          {
+            "Id":5,
             "Title":"The Ticket Top 10",
             "StartTime":"19:00",
             "EndTime":"21:00"
