--- a/StreamRecorder/StreamRecorder.csproj
+++ b/StreamRecorder/StreamRecorder.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <StartupObject>StreamRecorder.Program</StartupObject>
   </PropertyGroup>
 
@@ -16,6 +16,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="NAudio.Core" Version="2.0.0" />
     <PackageReference Include="NAudio.WinMM" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StreamRecorderLib\StreamRecorderLib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
