--- a/StreamRecorder/appsettings.json
+++ b/StreamRecorder/appsettings.json
@@ -24,7 +24,7 @@
       "RecordOn":"true",
       "SaveFolder":"D:\\Radio\\KTCK-AM\\",
       "DaysToKeep":7,
-      "RestartOnException":"true",
+      "AutoRestart":"true",
       "Schedule":[
          {
             "Id":1,
