reorganized a few services for DI

--- a/StreamRecorder/StreamRecorder.csproj
+++ b/StreamRecorder/StreamRecorder.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StreamRecorder.Converter\StreamRecorder.Converter.csproj" />
     <ProjectReference Include="..\StreamRecorder.Logging\StreamRecorder.Logging.csproj" />
     <ProjectReference Include="..\StreamRecorderLib\StreamRecorderLib.csproj" />
   </ItemGroup>
