--- a/StreamRecorder/appsettings.json
+++ b/StreamRecorder/appsettings.json
@@ -7,55 +7,61 @@
         }
     },
    "AppConfig":{
-      "Playlist":[
-        "http://24863.live.streamtheworld.com:80/KTCKAM_SC",
-        "http://24863.live.streamtheworld.com:3690/KTCKAM_SC",
-        "http://25103.live.streamtheworld.com:80/KTCKAM_SC",
-        "http://25103.live.streamtheworld.com:3690/KTCKAM_SC",
-        "http://24083.live.streamtheworld.com:80/KTCKAM_SC",
-        "http://24083.live.streamtheworld.com:3690/KTCKAM_SC",
-        "http://14003.live.streamtheworld.com:80/KTCKAM_SC",
-        "http://14003.live.streamtheworld.com:3690/KTCKAM_SC",
-        "http://18493.live.streamtheworld.com:80/KTCKAM_SC",
-        "http://18493.live.streamtheworld.com:3690/KTCKAM_SC",
-        "http://18723.live.streamtheworld.com:80/KTCKAM_SC",
-        "http://18723.live.streamtheworld.com:3690/KTCKAM_SC"
-      ],
-      "RecordOn":"true",
-      "SaveFolder":"D:\\Radio\\KTCK-AM\\",
-      "DaysToKeep":7,
-      "AutoRestart":"true",
-      "Schedule":[
-         {
-            "Id":1,
-            "Title":"The Musers",
-            "StartTime":"5:30",
-            "EndTime":"10:00"
-         },
-         {
-            "Id":2,
-            "Title":"Norm and D",
-            "StartTime":"10:00",
-            "EndTime":"12:00"
-         },
-         {
-            "Id":3,
-            "Title":"The Hang Zone",
-            "StartTime":"12:00",
-            "EndTime":"15:00"
-         },
-         {
-            "Id":4,
-            "Title":"The Hardline",
-            "StartTime":"15:00",
-            "EndTime":"19:00"
-         },
-         {
-            "Id":5,
-            "Title":"The Ticket Top 10",
-            "StartTime":"19:00",
-            "EndTime":"21:00"
-         }
-      ]
+        "RecordOn":"true",
+        "SaveFolder":"D:\\Radio\\",
+        "DaysToKeep":7,
+        "AutoRestart":"true",
+        "Station":{
+            "Name":"SportsRadio 1310 The Ticket",
+            "CallSign":"KTCK-AM",
+            "Genre":"Sports Talk",
+            "Location":"Dallas, TX",
+            "Playlist":[
+            "http://24863.live.streamtheworld.com:80/KTCKAM_SC",
+            "http://24863.live.streamtheworld.com:3690/KTCKAM_SC",
+            "http://25103.live.streamtheworld.com:80/KTCKAM_SC",
+            "http://25103.live.streamtheworld.com:3690/KTCKAM_SC",
+            "http://24083.live.streamtheworld.com:80/KTCKAM_SC",
+            "http://24083.live.streamtheworld.com:3690/KTCKAM_SC",
+            "http://14003.live.streamtheworld.com:80/KTCKAM_SC",
+            "http://14003.live.streamtheworld.com:3690/KTCKAM_SC",
+            "http://18493.live.streamtheworld.com:80/KTCKAM_SC",
+            "http://18493.live.streamtheworld.com:3690/KTCKAM_SC",
+            "http://18723.live.streamtheworld.com:80/KTCKAM_SC",
+            "http://18723.live.streamtheworld.com:3690/KTCKAM_SC"
+            ],
+            "Shows":[
+                {
+                "Id":1,
+                "Title":"The Musers",
+                "StartTime":"5:30",
+                "EndTime":"10:00"
+                },
+                {
+                "Id":2,
+                "Title":"Norm and D",
+                "StartTime":"10:00",
+                "EndTime":"12:00"
+                },
+                {
+                "Id":3,
+                "Title":"The Hang Zone",
+                "StartTime":"12:00",
+                "EndTime":"15:00"
+                },
+                {
+                "Id":4,
+                "Title":"The Hardline",
+                "StartTime":"15:00",
+                "EndTime":"19:00"
+                },
+                {
+                "Id":5,
+                "Title":"The Ticket Top 10",
+                "StartTime":"19:00",
+                "EndTime":"21:00"
+                }
+            ]
+        },
    }
 }
